Prevent Horizontal Scrolling

--- a/.factory/_/lot/row.scss
+++ b/.factory/_/lot/row.scss
@@ -4,6 +4,7 @@ $max: 6;
   flex: 1;
   margin: 0;
   min-height: 0;
+  width: 100%;
   @for $i from 1 through $max {
     &.size\:#{$i}\/#{$max} {
       max-height: percentage(math.div($i, $max));
