--- a/index.css
+++ b/index.css
@@ -3243,6 +3243,7 @@ label .is\:host[type=radio] + span {
   flex: 1;
   margin: 0;
   min-height: 0;
+  width: 100%;
 }
 .lot\:row.size\:1\/6,
 .size\:1\/6.content\:row {
